--- a/Day21/quotes/style.css
+++ b/Day21/quotes/style.css
@@ -18,19 +18,19 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  h1 {
+  /* /* h1 {
     margin-bottom: 20px;
     color: #555;
-  }
+  } */
   
   .quote-box {
     margin: 20px 0;
     padding: 20px;
-    border-left: 4px solid #007bff;
+    border-left: 4px solid #00ff8c;
     font-style: italic;
     background: #f9f9f9;
     border-radius: 5px;
-  }
+  } 
   
 
   
